plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/bottom-mpp/src/iosSimLibTest/kotlin/transitiveStory.midActual/CallInCTests.kt
package transitiveStory.midActual

/*import playground.first.callMe307563354
import playground.first.fsdkjgnfs*/
import transitiveStory.bottomActual.mppBeginning.BottomActualDeclarations
import kotlin.test.Test
import kotlin.test.assertEquals

val callInCTests = BottomActualDeclarations()

class <!LINE_MARKER("descr='Run Test'")!>CallInCTests<!> {
    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>someTestCallingTransitiveDeps<!>() {
        // val call = callMe307563354
//        println(call)
        assertEquals(true, true)
    }
}
